# aegisflux

./: .gitignore  AGENT_CAPABILITIES_REPORT.md  AGENT_WEBSOCKET_GUIDE.md  ARCHITECTURE.md  BACKEND_AGENT_TEAM_SYNC.md  POLICY_DELIVERY_STATUS.md  POLICY_DEPLOYMENT_SUCCESS.md  README.md  TODO.md  docker-compose.test.yml  docker-compose.yml  icmp_metadata.json  icmp_program.c  temp_artifact.tar  temp_artifact.tar.zst  temp_icmp_config.json  temp_icmp_metadata.json  temp_icmp_program.c
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml  test.yml
agents/linux-agent/: Cargo.toml  README.md
agents/linux-agent/docs/: DYNAMIC_PACKS.md  SECURITY.md
agents/linux-agent/scripts/: install-lab-systemd.sh  install-systemd.sh  run-lab-once.sh  uninstall-lab-systemd.sh  uninstall-systemd.sh
agents/linux-agent/src/: collector.rs  config.rs  detection.rs  event.rs  main.rs  security.rs  supervisor.rs  transport.rs
agents/linux-agent/src/dynamic_pack/: cache.rs  eval.rs  mod.rs  pipeline.rs  schema_check.rs
agents/local-agent/: Dockerfile  Makefile  README.md  go.mod  go.sum
agents/macos-agent/: Cargo.toml  README.md
agents/macos-agent/docs/: SECURITY.md
agents/macos-agent/src/: collector.rs  config.rs  event.rs  main.rs  security.rs  transport.rs
agents/windows-agent/: Cargo.toml  README.md
agents/windows-agent/docs/: DYNAMIC_PACKS.md  SECURITY.md
agents/windows-agent/scripts/: install-lab-scheduled-task.ps1  lab-smoke-detection.ps1  run-lab-once.ps1  uninstall-lab-scheduled-task.ps1
agents/windows-agent/src/: collector.rs  config.rs  detection.rs  event.rs  main.rs  process_lifecycle.rs  security.rs  transport.rs
agents/windows-agent/src/dynamic_pack/: cache.rs  eval.rs  http.rs  mod.rs  pipeline.rs  schema_check.rs  verify.rs
backend/actions-api/: AGENT_CONFIGURATION_API.md  Dockerfile  README_REGISTRATION_BACKEND.md  go.mod
backend/bpf-registry/: Dockerfile  README.md
backend/config-api/: go.mod  go.sum
backend/correlator/: Dockerfile  go.mod  go.sum
backend/decision/: Dockerfile  README.md  go.mod  go.sum
backend/detection-pipeline/: Dockerfile  README.md  go.mod
backend/detectionpack-schema/: go.mod  schema_test.go
backend/etl-enrich/: Dockerfile  README.md  requirements.txt
backend/ingest/: Dockerfile  README.md  go.mod  go.sum
backend/orchestrator/: Dockerfile  SEG_MAPS_API.md  go.mod  go.sum
backend/segmenter/: Dockerfile  go.mod
backend/websocket-gateway/: Dockerfile  README.md  go.mod  go.sum
data/samples/: connect_event.json  exec_event.json
docs/: AEGIS_AGENT_PERFORMANCE_ARCHITECTURE.md  AEGIS_AI_AGENT_PLATFORM_ARCHITECTURE.md  AEGIS_AI_NATIVE_LEAP_ARCHITECTURE.md  AEGIS_CLARION_UI_PATTERNS_TO_ADOPT.md  AEGIS_DYNAMIC_AI_DETECTION_STRATEGY.md  AEGIS_INTEGRATION_EVENT_CONTRACTS.md  AEGIS_PLATFORM_VISION.md  AEGIS_PRODUCT_ROADMAP.md  AEGIS_SENSOR_FUSION_ARCHITECTURE.md  AEGIS_UI_CLARION_ALIGNMENT.md  AEGIS_UI_SIMPLIFICATION_GUIDE.md  AGENT_IMPLEMENTATION_GUIDE.md  API_REFERENCE.md  BACKEND_COMPLETION_SUMMARY.md  BACKEND_SAFETY_SHIM.md  ENGINEER_GUIDE.md  README.md  TESTING_GUIDE.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/agents/: AGENT_TEAM_TESTING_RESULTS.md  DETECTION_PACK_EVALUATOR_CONTRACT.md  README.md
docs/archive/: Cap7.10  agent-integration
docs/backend/: BACKEND_IMPLEMENTATION_CHECKLIST.md  BACKEND_SPECIFICATION_FOR_AGENT.md  BACKEND_WEBSOCKET_IMPLEMENTATION_PLAN.md  README.md
docs/capabilities/: CAP7_10_IMPLEMENTATION_SUMMARY.md  CAP7_9_IMPLEMENTATION_SUMMARY.md  backend_07_10_enforcement.md  backend_07_10_visibility.md  backend_07_9_safety_shim.md
docs/demos/: AUDIT_MODE_LAB_SMOKE.md  CHECKLIST.md  README.md  SAMPLE_SCENARIOS.md
schemas/: Event.json  README.md
scripts/: assign_artifacts_to_host.py  test_nats_monitoring.sh  test_registry.sh
tests/: cap7_10_test.sh  e2e_test.sh  integration_test.sh  performance_test.sh  run_all_tests.sh  security_test.sh
(+428 files in other folders)
