[package]
name = "aegis-macos-agent"
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause"
description = "Aegis macOS visibility agent"

[dependencies]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
undocumented_unsafe_blocks = "deny"
