[package]
name = "aegis-windows-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "BSD-2-Clause"
description = "Aegis Windows visibility agent"

[dependencies]
base64 = "0.22.1"
base64ct = "=1.6.0"
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["alloc", "rand_core"] }
serde = { version = "1.0.219", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
sha2 = { version = "0.10.8", default-features = false }
sysinfo = { version = "0.36.1", default-features = false, features = ["system"] }

[dev-dependencies]
rand = "0.8.5"

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.39.0", features = ["bundled"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
undocumented_unsafe_blocks = "deny"
